src/OneDas.Hdf.Explorer/wwwroot/css/site.css
body {
    padding-top: 5em;
}

#start-date, #end-date {
    background-color: #fff;
}

.url {
    cursor: pointer;
}

.channel-hub-list {
    height: 40em;
    overflow-y: auto;
}

/* set logo properties */
.logo {
    height: 35px;
}

/* make div appear centered vertically */
.center-vertically {
    min-height: calc(100vh - 60px - 34px - 100px);
    display: flex;
    flex-direction: column;
    justify-content: center;
    overflow: auto;
}

.plus-center-horizontally {
    align-items: center;
}

.noselect {
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
}

/* hierachical list group */

.list-group.list-group-root {
    padding: 0;
    overflow: hidden;
}

.list-group.list-group-root .list-group {
    margin-bottom: 0;
}

.list-group.list-group-root .list-group-item {
    border-radius: 0;
    border-width: 1px 0 0 0;
    padding: 0.4rem 0 0.4rem 0;
}

.list-group.list-group-root > .list-group-item:first-child {
    border-top-width: 0;
}

.list-group.list-group-root > .list-group > .list-group-item {
    padding-left: 1.4em;
    padding-top: 0.1em;
    padding-bottom: 0.1em;
}

.list-group.list-group-root > .list-group > .list-group > .list-group-item {
    padding-left: 2.8em;
    padding-top: 0.1em;
    padding-bottom: 0.1em;
}

.list-group.list-group-root > .list-group > .list-group > .list-group > .list-group-item {
    padding-left: 4.2em;
    padding-top: 0.1em;
    padding-bottom: 0.1em;
}

.list-group-item .fa {
    margin-right: 0.4em;
}

/* fa fix */
.fa-fix {
    font-size: 14px;
}

